Removed from and to, added timestamp, Changed openapi.yaml
