# backend/corona-components/corona-api/src/main/openapi/openapi.yaml
@@ -332,6 +332,10 @@ components:
         accuracy:
           type: integer
           description: Position accuracy in meters (radius), lower is better
+        timestamp:
+          type: string
+          description: in IS0 8601 format. eg. `1963-11-22T18:30:00Z`
+          format: date-time
         network:
           type: object
           properties: {}
